--- a/style.css
+++ b/style.css
@@ -8,6 +8,6 @@
 .autocomplete-light-widget .deck { padding-left: 165px; width: 262px; }
 .autocomplete-light-widget .deck [data-value] { font-size: 10px; margin-bottom: 5px; padding: 5px; background: -moz-linear-gradient(center top , #F4F7F9 0%, #EBF1F5 100%) repeat scroll 0 0 transparent; border-radius: 5px; list-style-type: none; }
 .autocomplete-light-widget .deck [data-value] span { display: inline-block; width: 210px; }
-.autocomplete-light-widget .deck [data-value] .remove { float: left; margin-right: 10px; color: #fff; text-indent: -999px; height: 15px; width: 15px; background: url('../admin/img/inline-delete.png'), url('../admin/img/admin/inline-delete.png'); margin-top: 2px; cursor: pointer; }
+.autocomplete-light-widget .deck [data-value] .remove { float: left; margin-right: 10px; color: #fff; text-indent: -999px; height: 15px; width: 15px; background-image: url('../admin/img/inline-delete.png'); margin-top: 2px; cursor: pointer; }
 .autocomplete-light-widget .deck [data-value] .remove:hover { background-position: -15px 0; }
 .autocomplete-light-widget .deck [data-value]:last-child { margin-bottom: 0; }
