--- a/style.css
+++ b/style.css
@@ -30,13 +30,28 @@
     background-clip: padding-box;
 }
 
-.autocomplete
-{
+.dropdown-menu .active, .dropdown-menu [data-value]:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+    background-repeat: repeat-x;
+    outline: 0;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
 
-.yourlabs-autocomplete.inner-container a
-{
-    text-decoration: none;
+.dropdown-menu [data-value] {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 20px;
+    color: #333333;
+    white-space: nowrap;
 }
 
 .div
@@ -44,55 +59,9 @@
     display: block;
 }
 
-.yourlabs-autocomplete
-{
-    background: none;
-    border: none;
-}
-
-.yourlabs-autocomplete.outer-container
-{
-    position: relative;
-}
-
-.yourlabs-autocomplete.inner-container
-{
-    background: #fff;
-    left: -1px;
-    position: absolute;
-    top: 2px;
-    width: 260px;
-    border-radius: 3px 3px 3px 3px;
-    box-shadow: 0 0 6px #999999;
-    border: 1px solid #AAAAAA;
-    outline: 0 none;
-}
-
-.yourlabs-autocomplete.inner-container
-{
-    list-style-type: none;
-    margin: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 0;
-    position: relative;
-}
-
-.yourlabs-autocomplete.inner-container div
-{
-    color: #000;
-    padding: 5px 6px;
-}
-
 .yourlabs-autocomplete [data-value]
 {
     cursor: pointer;
-}
-
-.yourlabs-autocomplete .hilight
-{
-    background: #2e83db;
-    color: #fff;
 }
 
 .autocomplete-light-widget .deck [data-value]
