Fixed no close }

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body.change-form .autocomplete-light-widget
     margin-right: 10px;
     text-indent: -999px;
     width: 15px;
-
+}
 
 .autocomplete-light-widget .deck [data-value] .remove:hover
 {
