--- a/old_style.css
+++ b/old_style.css
@@ -96,8 +96,8 @@ body.change-form .autocomplete-light-widget
     background-position: -15px 0;
 }
 
-.yourlabs-autocomplete .choiceDetail, 
-.yourlabs-autocomplete .choiceUpdate 
+.yourlabs-autocomplete .choice-detail, 
+.yourlabs-autocomplete .choice-update 
 {
     display: none;
 }
