delete of untracked and unused files

--- a/style.css
+++ b/style.css
@@ -153,6 +153,19 @@ input.autocomplete.xhr-pending {
     display: none;
 }
 
+/* These lines are important to avoid style change to the underlying divs */
+.autocomplete-light-clearfix:before,
+.autocomplete-light-clearfix:after {
+    content: " "; 
+    display: table; 
+}
+.autocomplete-light-clearfix:after {
+    clear: both;
+}
+.autocomplete-light-clearfix {
+    *zoom: 1;
+}
+
 /* grappelli specific */
 fieldset.grp-module .grp-row {
     overflow: visible !important;
